Fix sub header alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -78,7 +78,6 @@ body {
 				background-color: #cbecb2; // A light, clean gray
 				color: #495057; // A darker gray for good contrast
 				font-size: 16px;
-				margin: 0 6px 0 6px;
 				padding: 10px 0 10px 0;
 				border-bottom-left-radius: 12px;
 				border-bottom-right-radius: 12px;
